# corgea-take-home

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .trivyignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/accounts/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
backend/core/: __init__.py  apps.py  audit.py  auth.py  authentication.py  cache.py  constants.py  consumers.py  emails.py  exception_handler.py  fields.py  ip_utils.py  middleware.py  pagination.py  realtime.py  routing.py  schedules.py  throttles.py
backend/findings/: audit.py  serializers.py  tasks.py  urls.py
backend/findings/migrations/: 0001_initial.py  0002_security_indexes.py  0003_update_auditlog_actions.py  0004_add_password_change_action.py  0005_sla_tracking.py  0006_audit_action_choices.py  0007_ticket_closed_change_type.py  0008_alter_auditlog_action_alter_finding_line_end_and_more.py
backend/findings/models/: __init__.py  audit.py  comment.py  finding.py  history.py  rule.py  (+1 more)
backend/integrations/: exceptions.py  jira_client.py  linear_client.py  models.py  serializers.py  tasks.py  ticket_service.py  urls.py  validators.py
backend/projects/: member_serializers.py  member_views.py  membership.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/scans/: ingestion.py  models.py  serializers.py  tasks.py  urls.py
backend/tests/: conftest.py  test_auth.py  test_findings.py  test_integrations.py  test_middleware.py  test_overview.py  test_password_reset.py  test_projects.py  test_rbac.py  test_scans.py  test_schedules.py  test_security.py
(+157 files in other folders)
