[project]
name = "vulntracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "psycopg2-binary>=2.9",
    "django-cors-headers>=4.3",
    "gunicorn>=22.0",
    "requests>=2.31",
    "cryptography>=42.0",
    "django-q2>=1.7",
    "django-anymail[resend]>=12.0",
    "drf-spectacular>=0.28",
    "channels>=4.1",
    "daphne>=4.1",
    "argon2-cffi>=25.1.0",
    "defusedcsv>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "safety>=3.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = "tests.py test_*.py"
pythonpath = "."
addopts = "--tb=short"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "config/wsgi.py",
    "config/asgi.py",
    "manage.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B105"]
